<resources>
    <string name="app_name">Runnis</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_myRunns">My Runs</string>
    <string name="title_setting">Settings</string>
    <string name="title_diagram">Overview</string>
    <string name="settings_headline1">Sensors</string>
    <string name="settings_bluetooth">Bluetooth</string>
    <string name="settings_bluetooth_sum">Turn Bluetooth on or off</string>
    <string name="settings_gps">GPS</string>
    <string name="settings_gps_sum">Turn GPS on or off</string>
    <string name="settings_headline2">Change Name</string>
    <string name="settings_name">Name</string>
    <string name="settings_headline3">Change Theme</string>
    <string name="settings_headline3_sum">To change the Theme you have to restart the App afterwards</string>
    <string name="settings_name_sum">To change your name please click here</string>
    <string name="bt_title_start">Ready to connect</string>
    <string name="bt_title_connecting">Connecting…</string>
    <string name="bt_title_accepted">Connected to device</string>
    <string name="bt_title_cannotfind">Cannot find the MoveSense device</string>
    <string name="bt_title_cannotconn">Cannot connect to the MoveSense device</string>
    <string name="bt_button_connect">Connect</string>
    <string name="instructions_text">This app demonstrates how to connect to the Movesense sensor.\n
        - First scan for BLE devices and then connect to it by clicking it on the list.\n
        - Connected devices are shown on the list with ***.\n
        - Clicking on connected device will show device info.\n
        - Long click on connected device will disconnect.</string>
    <string name="title_runDetails">Run Details</string>
    <string name="title_home_first">Welcome to Runnis!</string>
    <string name="title_home_first_text">You can track your runs daily with this app.\n
        You can review this at My Runs.\n
        You can track your route via GPS and see the current temperature.\n
        After your run is complete, you can see your speed.\n
        You can also make predictions about the next run. Just press the diagram button at My Runs.\n
        If you do not want the app to use your GPS location, you can prohibit this under Settings.\n
        Please also enter a name under Settings.\n</string>
    <string name="title_home_headline">Hello</string>
    <string name="title_home_text">Here you can see details about the last run:</string>
    <string name="home_last_time">time:</string>
    <string name="home_last_km">distance:</string>
    <string name="home_moreInfo">Please go to My Runs and click on the first run to see more information.</string>
    <string name="home_km"> km</string>
    <string name="home_minutes"> minutes</string>
    <string name="myruns_km_total">total km: </string>
    <string name="myruns_time_total">total time: </string>
    <string name="runDetails">To delete this run, please click on the button in the bottom left corner.</string>
    <string name="delete_Toast">The run has been deleted</string>
    <string name="main_Toast_noRunDetails">You are running this run so you can not see the details.</string>
    <string name="main_Toast_noRun">You are running this run so you can not start a new run.</string>
    <string name="main_Toast_noRunGPS">You GPS is switched off so you can not start a new run. Please go to settings and turn it on</string>
    <string name="temperature">Outside temperature: </string>
    <string name="cannot_use_temperature">This function is not available on this phone</string>
    <string name="prediction_text">You can predict your next run based on the time (in minutes)...</string>
    <string name="prediction_text2">... or the distance (in km)</string>
    <string name="prediction_button_predict">predict</string>
    <string name="prediction_canNot_km">You can not predict the distance because you have not run</string>
    <string name="prediction_canNot_minutes">You can not predict the time because you have not run</string>
    <string name="prediction_return">You will run in </string>
    <string name="prediction_return_km"> km </string>
    <string name="prediction_return_minutes"> minutes </string>

</resources>
