<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="186dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/switch1"
        android:layout_marginTop="19dp"
        android:text="@string/settings_headline1" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="74dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/switch1"
        android:layout_marginEnd="36dp"
        android:text="@string/settings_bluetooth" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/switch1"
        android:layout_marginTop="128dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/switch2"
        android:layout_alignStart="@+id/textView"
        android:text="@string/settings_gps" />

    <View
        android:id="@+id/divider"
        android:layout_width="323dp"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="177dp"
        android:background="?android:attr/listDivider" />

</RelativeLayout>